change the footer contact detail

--- a/geonode/templates/v2/base.html
+++ b/geonode/templates/v2/base.html
@@ -253,7 +253,7 @@
                         </li>
                         <li>
                             <i class="fa fa-globe"></i>
-                            <strong>Website:</strong> www.immap.org
+                            <strong>Website:</strong> www.andma.gov.af
                         </li>
                     </ul>
                 </div>
@@ -269,8 +269,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-5 cp">
-                    &copy; 2016
-                    <a target="_blank" href="http://immap.org/" title="Free Twitter Bootstrap WordPress Themes and HTML templates">{% trans "iMMAP" %}</a>. All Rights Reserved. Funded by USAID
+                    &copy; 2020
+                    <a target="_blank" href="http://immap.org/" title="Free Twitter Bootstrap WordPress Themes and HTML templates">{% trans "ANDMA" %}</a>. Powered By iMMAP
                 </div>
                 <!--/Copyright-->
                 <div class="col-md-6">
