change both base.html and partners.html

--- a/geonode/templates/v2/base.html
+++ b/geonode/templates/v2/base.html
@@ -270,7 +270,7 @@
             <div class="row">
                 <div class="col-md-5 cp">
                     &copy; 2020
-                    <a target="_blank" href="http://immap.org/" title="Free Twitter Bootstrap WordPress Themes and HTML templates">{% trans "ANDMA" %}</a>. Powered By iMMAP
+                    <a target="_blank" href="http://andma.gov.af/" title="Free Twitter Bootstrap WordPress Themes and HTML templates">{% trans "ANDMA" %}</a>. Powered By iMMAP
                 </div>
                 <!--/Copyright-->
                 <div class="col-md-6">
