--- a/geonode/templates/v2/partners.html
+++ b/geonode/templates/v2/partners.html
@@ -30,7 +30,7 @@
 		<div class="container">
 			<h3>{% trans "Data Providers and Partners" %}</h3>
 			<p>{% trans "This list provides an insight in the main partners who have provided or are providing essential data." %}
-			{% trans "For each of the organisations the main contributions for the ASDC are listed." %}<br>
+			{% trans "For each of the organisations the main contributions for the AHNDC are listed." %}<br>
 			{% trans "Homepage | Photo credit to Bob McKerrow, description:  Teshkan Valley, Badakhshan" %}</p>
 			<p>&nbsp;</p>
 
@@ -224,7 +224,7 @@
 			    </div>
 			    <div class="col-md-4">
 			        <div class="center">
-			            <img src="{{ STATIC_URL }}v2/images/partner/andma.png" alt="">
+			            <img src="{{ STATIC_URL }}v2/images/partner/ANDMA_LOGO.png" alt="" style="width:44%">
 			            <p> </p>
 			            <h4>{% trans "Ministry of Disaster Management and Humanitarian Affairs of Afghanistan / Afghanistan National Disaster Management Authority (ANDMA)" %}</h4>
 			            <p>{% trans "Plays an essential role in coordinating and relaying information." %}</p>
@@ -254,7 +254,7 @@
 			            <img src="{{ STATIC_URL }}v2/images/partner/chelsa.png" alt="" style="height: 160px; width: 280px;">
 			            <p> </p>
 			            <h4>{% trans "Climatologies at High resolution for the Earth’s Land Surface Areas (CHELSA)" %}</h4>
-			            <p>{% trans "CHELSA provides ASDC with Climate and Climate Change data. CHELSA is a high resolution (30 arc sec) climate data set for the earth land surface areas currently hosted by the Swiss Federal Institute for Forest, Snow and Landscape Research WSL (Dr. Dirk N. Karger, Prof. Dr. Niklaus Zimmermann), and has been developed in coorporation with the Department of Geography of the University of Hamburg (Prof. Dr. Jürgen Böhner, Dr. Olaf Conrad, Tobias Kawohl), the University of Zurich (Dr. Michael Kessler), and the University of Göttingen (Prof. Dr. Holger Kreft)." %}</p>
+			            <p>{% trans "CHELSA provides AHNDC with Climate and Climate Change data. CHELSA is a high resolution (30 arc sec) climate data set for the earth land surface areas currently hosted by the Swiss Federal Institute for Forest, Snow and Landscape Research WSL (Dr. Dirk N. Karger, Prof. Dr. Niklaus Zimmermann), and has been developed in coorporation with the Department of Geography of the University of Hamburg (Prof. Dr. Jürgen Böhner, Dr. Olaf Conrad, Tobias Kawohl), the University of Zurich (Dr. Michael Kessler), and the University of Göttingen (Prof. Dr. Holger Kreft)." %}</p>
 			        </div>
 			    </div>
 			</div>
@@ -265,7 +265,7 @@
 			            <img src="{{ STATIC_URL }}v2/images/partner/ventusky.png" alt="">
 			            <p> </p>
 			            <h4>{% trans "Ventusky" %}</h4>
-			            <p>{% trans "Ventusky provides wonderfully styled access to weather forecast in the ASDC dashboard and settlement inspector. It provides data for Afghanistan mostly from Deutsche Wetter Dienst ICON (7.5 km resolution), or alternatively from NOAA’s Global Forecast System GFS (15 km resolution). Ventusky is a product provided by InMeteo, a Czech meteorological company, in collaboration with Marek Mojzík and Martin Prantl" %}</p>
+			            <p>{% trans "Ventusky provides wonderfully styled access to weather forecast in the ANHDC dashboard and settlement inspector. It provides data for Afghanistan mostly from Deutsche Wetter Dienst ICON (7.5 km resolution), or alternatively from NOAA’s Global Forecast System GFS (15 km resolution). Ventusky is a product provided by InMeteo, a Czech meteorological company, in collaboration with Marek Mojzík and Martin Prantl" %}</p>
 			        </div>
 			    </div>
 			    <div class="col-md-4">
@@ -273,7 +273,7 @@
 			            <img src="{{ STATIC_URL }}v2/images/partner/ecmwf.png" alt="">
 			            <p> </p>
 			            <h4>{% trans "European Centre for Medium-Range Weather Forecasts (ECMWF)" %}</h4>
-			            <p>{% trans "The European Centre for Medium-Range Weather Forecasts (ECMWF) is an independent intergovernmental organisation supported by 34 states. It provides much of the input data for the GLOFAS data, in addition the ASDC utilizes data from other partner organisations which rely on ECMWF data (weather forecast data, climate and climate change data)." %}</p>
+			            <p>{% trans "The European Centre for Medium-Range Weather Forecasts (ECMWF) is an independent intergovernmental organisation supported by 34 states. It provides much of the input data for the GLOFAS data, in addition the ANHDC utilizes data from other partner organisations which rely on ECMWF data (weather forecast data, climate and climate change data)." %}</p>
 			        </div>
 			    </div>
 			    <div class="col-md-4">
@@ -292,7 +292,7 @@
 			            <img src="{{ STATIC_URL }}v2/images/partner/calu.png" alt="">
 			            <p> </p>
 			            <h4>{% trans "California University of Pennsylvania" %}</h4>
-			            <p>{% trans "California University of Pennsylvania has integrated parts of the ASDC into its Geography syllabus and has become the most prolific Educational ASDC user. Cal U uses the ASDC to teach undergraduate students basic applied geography insights within a disaster management context. The training course is being led by Professor Dr. Thomas R. Mueller, who has taught a wide variety of courses including World Regional Geography, GIS, crime mapping, demographic analysis, and spatial models in public safety." %}</p>
+			            <p>{% trans "California University of Pennsylvania has integrated parts of the ANHDC into its Geography syllabus and has become the most prolific Educational ANHDC user. Cal U uses the ANHDC to teach undergraduate students basic applied geography insights within a disaster management context. The training course is being led by Professor Dr. Thomas R. Mueller, who has taught a wide variety of courses including World Regional Geography, GIS, crime mapping, demographic analysis, and spatial models in public safety." %}</p>
 			        </div>
 			    </div>
 			    <div class="col-md-4">
@@ -300,7 +300,7 @@
 			            <img src="{{ STATIC_URL }}v2/images/partner/northeastern.png" alt="">
 			            <p> </p>
 			            <h4>{% trans "Northeastern University" %}</h4>
-			            <p>{% trans "Northeastern University has integrated parts of the ASDC into their Crisis Mapping for Humanitarian Action  syllabus. Northeastern University uses the ASDC to teach graduate students applied geography insights within a disaster management context." %}
+			            <p>{% trans "Northeastern University has integrated parts of the ANHDC into their Crisis Mapping for Humanitarian Action  syllabus. Northeastern University uses the ANHDC to teach graduate students applied geography insights within a disaster management context." %}
 			        </div>
 			    </div>
 			</div>
