--- a/dashboard/templates/v2/dash_landslide.html
+++ b/dashboard/templates/v2/dash_landslide.html
@@ -417,7 +417,7 @@
 	                </div>
 	                <div class="x_content">
                 		<div class="col-md-12 col-xs-12 col-sm-8 print-no-pad">
-                			<div id="echart_bar_horizontal_lsi" class="ch-size"></div>
+                			<div id="echart_bar_horizontal_lsi" class="ch-size-bar-landslide"></div>
                 		</div>
                 	    <div class="col-md-12 col-xs-12 col-sm-4 center">
                 	    	<div class="tile_count">
@@ -536,7 +536,7 @@
 	                </div>
 	                <div class="x_content">
                 		<div class="col-md-12 col-xs-12 col-sm-8 print-no-pad">
-                			<div id="echart_bar_horizontal_ku" class="ch-size"></div>
+                			<div id="echart_bar_horizontal_ku" class="ch-size-bar-landslide"></div>
                 		</div>
                 	    <div class="col-md-12 col-xs-12 col-sm-4 center">
                 	    	<div class="tile_count">
@@ -655,7 +655,7 @@
 	                </div>
 	                <div class="x_content">
                 		<div class="col-md-12 col-xs-12 col-sm-8 print-no-pad">
-                			<div id="echart_bar_horizontal_s1" class="ch-size"></div>
+                			<div id="echart_bar_horizontal_s1" class="ch-size-bar-landslide"></div>
                 		</div>
                 	    <div class="col-md-12 col-xs-12 col-sm-4 center">
                 	    	<div class="tile_count">
@@ -689,8 +689,8 @@
 	                        <p class="text-muted font-13 m-b-30">
 	                        	{% trans "Afghanistan population within landslide susceptibility for bedrock landslides in rapid evolution (S2), nationwide. Indicates the susceptibility for bedrock landslides in rapid evolution, including: falls and toppling. Susceptibility values are represented according the following scale: 0=Null; 1-3=Low; 4-5=Moderate; 6=High; 7-9=Very High" %}
 	                        </p>
-	                        <div class="table-responsive hidden-print">
-	                            <table id="" class="table table-hover online">
+	                        <div class="table-responsive {% if 'print' in request.build_absolute_uri %}visible-print-block{% else %}hidden-print{% endif %}">
+	                            <table id="" class="table {% if 'print' in request.build_absolute_uri %}table-condensed print{% else %}table-hover online{% endif %}">
 	                                <thead>
 	                                    <tr>
 	                                        <th rowspan="2">{% trans "Region" %}</th>
@@ -723,40 +723,6 @@
 	                                </tbody>
 	                            </table>
 	                        </div>
-	                        <div class="table-responsive visible-print-block">
-	                            <table class="table table-condensed print">
-	                                <thead>
-	                                    <tr>
-	                                        <th rowspan="2">{% trans "Region" %}</th>
-	                                        <th colspan="4">{% trans "Risk Level" %}</th>
-	                                    </tr>
-	                                    <tr>
-	                                        <th class="landslide_vhigh hum">{% trans "Very High" %}</th>
-	                                        <th class="landslide_high hum">{% trans "High" %}</th>
-	                                        <th class="landslide_mod hum">{% trans "Moderate" %}</th>
-	                                        <th class="landslide_low hum">{% trans "Low" %}</th>
-	                                    </tr>
-	                                </thead>
-	                                <tbody>
-	                                    <tr>
-	                                        <td class="boldRow">{{parent_label}}</td>
-	                                        <td class="boldRow landslide_vhigh">{{lsi_immap_very_high}}</td>
-	                                        <td class="boldRow landslide_high">{{lsi_immap_high}}</td>
-	                                        <td class="boldRow landslide_mod">{{lsi_immap_moderate}}</td>
-	                                        <td class="boldRow landslide_low">{{lsi_immap_low}}</td>
-	                                    </tr>
-	                                    {% for data in lc_child %}
-	                                    <tr>
-	                                        <td>{{data.na_en}}</td>
-	                                        <td class="landslide_vhigh">{{data.lsi_immap_very_high}}</td>
-	                                        <td class="landslide_high">{{data.lsi_immap_high}}</td>
-	                                        <td class="landslide_mod">{{data.lsi_immap_moderate}}</td>
-	                                        <td class="landslide_low">{{data.lsi_immap_low}}</td>
-	                                    </tr>
-	                                    {% endfor %}
-	                                </tbody>
-	                            </table>
-	                        </div>
 	                    </div>
 	                </div>
 	            </div>
@@ -774,7 +740,7 @@
 	                </div>
 	                <div class="x_content">
                 		<div class="col-md-12 col-xs-12 col-sm-8 print-no-pad">
-                			<div id="echart_bar_horizontal_s2" class="ch-size"></div>
+                			<div id="echart_bar_horizontal_s2" class="ch-size-bar-landslide"></div>
                 		</div>
                 	    <div class="col-md-12 col-xs-12 col-sm-4 center">
                 	    	<div class="tile_count">
@@ -808,8 +774,8 @@
 	                        <p class="text-muted font-13 m-b-30">
 	                        	{% trans "Afghanistan population within landslide susceptibility for cover material landslides in rapid evolution (S3). Indicates the susceptibility for cover material landslides in rapid evolution, including: debris- mud flows. Susceptibility values are represented according the following scale: 0=Null; 1-3=Low; 4-5=Moderate; 6=High; 7-9=Very High" %}
 	                        </p>
-	                        <div class="table-responsive hidden-print">
-	                            <table id="" class="table table-hover online">
+	                        <div class="table-responsive {% if 'print' in request.build_absolute_uri %}visible-print-block{% else %}hidden-print{% endif %}">
+	                            <table id="" class="table {% if 'print' in request.build_absolute_uri %}table-condensed print{% else %}table-hover online{% endif %}">
 	                                <thead>
 	                                    <tr>
 	                                        <th rowspan="2">{% trans "Region" %}</th>
@@ -842,40 +808,6 @@
 	                                </tbody>
 	                            </table>
 	                        </div>
-	                        <div class="table-responsive visible-print-block">
-	                            <table class="table table-condensed print">
-	                                <thead>
-	                                    <tr>
-	                                        <th rowspan="2">{% trans "Region" %}</th>
-	                                        <th colspan="4">{% trans "Risk Level" %}</th>
-	                                    </tr>
-	                                    <tr>
-	                                        <th class="landslide_vhigh hum">{% trans "Very High" %}</th>
-	                                        <th class="landslide_high hum">{% trans "High" %}</th>
-	                                        <th class="landslide_mod hum">{% trans "Moderate" %}</th>
-	                                        <th class="landslide_low hum">{% trans "Low" %}</th>
-	                                    </tr>
-	                                </thead>
-	                                <tbody>
-	                                    <tr>
-	                                        <td class="boldRow">{{parent_label}}</td>
-	                                        <td class="boldRow landslide_vhigh">{{lsi_immap_very_high}}</td>
-	                                        <td class="boldRow landslide_high">{{lsi_immap_high}}</td>
-	                                        <td class="boldRow landslide_mod">{{lsi_immap_moderate}}</td>
-	                                        <td class="boldRow landslide_low">{{lsi_immap_low}}</td>
-	                                    </tr>
-	                                    {% for data in lc_child %}
-	                                    <tr>
-	                                        <td>{{data.na_en}}</td>
-	                                        <td class="landslide_vhigh">{{data.lsi_immap_very_high}}</td>
-	                                        <td class="landslide_high">{{data.lsi_immap_high}}</td>
-	                                        <td class="landslide_mod">{{data.lsi_immap_moderate}}</td>
-	                                        <td class="landslide_low">{{data.lsi_immap_low}}</td>
-	                                    </tr>
-	                                    {% endfor %}
-	                                </tbody>
-	                            </table>
-	                        </div>
 	                    </div>
 	                </div>
 	            </div>
@@ -893,7 +825,7 @@
 	                </div>
 	                <div class="x_content">
                 		<div class="col-md-12 col-xs-12 col-sm-8 print-no-pad">
-                			<div id="echart_bar_horizontal_s3" class="ch-size"></div>
+                			<div id="echart_bar_horizontal_s3" class="ch-size-bar-landslide"></div>
                 		</div>
                 	    <div class="col-md-12 col-xs-12 col-sm-4 center">
                 	    	<div class="tile_count">
