--- a/geonode/static/v2/css/print.css
+++ b/geonode/static/v2/css/print.css
@@ -181,9 +181,20 @@
     div.ch-size{
         height: 370px !important;
         /*width: 250px !important;*/
-        width: 344px !important;
+        width: 270px !important;
+        /* width: 344px !important; */
+    }
+    
+    div.ch-size-bar-landslide{
+      height: 300px !important;
+      width: 190px !important;
     }
 
+    div.ch-size-bar-landcover{
+      height: 370px !important;
+      width: 344px !important;
+    }
+  
     div.ch-size-fforecast{
         height: 370px !important;
         width: 460px !important;
