--- a/geonode/templates/v2/base.html
+++ b/geonode/templates/v2/base.html
@@ -274,7 +274,7 @@
                 </div>
                 <!--/Copyright-->
                 <div class="col-md-6">
-                    <ul class="social pull-right">
+                    <ul class="social pull-right hidden-print">
                         <li>
                             <a href="mailto:admin.geonode@immap.org"><i class="fa fa-envelope"></i></a>
                         </li>
@@ -292,7 +292,7 @@
                         </li>
                     </ul>
                 </div>
-                <div class="col-md-1">
+                <div class="col-md-1 hidden-print">
                     <a id="gototop" class="gototop pull-right" href="#"><i class="fa fa-angle-up"></i></a>
                 </div>
                 <!--/Goto Top-->
