changel language file in static pages

--- a/geonode/templates/v2/about.html
+++ b/geonode/templates/v2/about.html
@@ -1,7 +1,7 @@
 {% extends "v2/site_base.html" %}
 
 {% load i18n %}
-{% block title %} {% trans "About ASDC" %} — {{ block.super }} {% endblock %}
+{% block title %} {% trans "About" %} — {{ block.super }} {% endblock %}
 {% block body_class %}about{% endblock %}
 {% block body_outer %}
 
@@ -28,13 +28,13 @@
 	<!-- About Us -->
 	<section id="about" class="container">
 	    <div class="center">
-	        <h2>{% trans "About ASDC" %}</h2>
+	        <h2>{% trans "About ANHDC" %}</h2>
 	        <p></p>
 	    </div>
 	    <hr>
-	    <p>{% trans "The Afghanistan Spatial Data Center (ASDC) is developed by iMMAP in Afghanistan. It is part of the iMMAP Disaster Risk Reduction Program, which is funded by the United States Agency for International Development (USAID)/Office of U.S. Foreign Disaster Assistance (OFDA)." %}</p>
-        <p>{% trans "The Disaster Risk Reduction (DRR) program is a scientific program that supports the humanitarian community with critical information to aid decision makers in emergency response or program development. The Afghanistan Spatial Data Center (ASDC) is the dissemination platform for DRR data and other baseline information. At present the ASDC is the most advanced geoportal on Afghanistan containing comprehensive and accurate data. The iMMAP DRR program is funded by USAID and it is ready for daily usage." %}</p>
-	    <p>{% trans "The information provided on ASDC are especially useful in regards to prediction, emergency response, M&E and planning purposes." %}</p>
+	    <p>{% trans "The Afghanistan Natural Hazard Data Center (ANHDC) is developed by iMMAP in Afghanistan. It is part of the iMMAP Disaster Risk Reduction Program, which is funded by the United States Agency for International Development (USAID)/Office of U.S. Foreign Disaster Assistance (OFDA)." %}</p>
+        <p>{% trans "The Disaster Risk Reduction (DRR) program is a scientific program that supports the humanitarian community with critical information to aid decision makers in emergency response or program development. The Afghanistan Natural Hazard Data Center (ANHDC) is the dissemination platform for DRR data and other baseline information. At present the AHNDC is the most advanced geoportal on Afghanistan containing comprehensive and accurate data. The iMMAP DRR program is funded by USAID and it is ready for daily usage." %}</p>
+	    <p>{% trans "The information provided on ANHDC are especially useful in regards to prediction, emergency response, M&E and planning purposes." %}</p>
 	    <hr>
 
 	    <div class="row">
@@ -109,14 +109,14 @@
 
 	    <!-- Meet the team -->
 	    <hr>
-	    <h2 class="center">{% trans "ASDC Core Team" %}</h2>
+	    <h2 class="center">{% trans "ANHDC Core Team" %}</h2>
 	    <hr>
 	    <div class="row author">
 	        <div class="col-md-3">
 	            <div class="x_panel">
 	                <!-- <p><img src="images/sample/team1.jpg" alt="" ></p> -->
 	                <h5 class="center">{% trans "Program Manager and Science Officer" %}</h5>
-	                <p>{% trans "Dr. Emlyn Hagen has led the development of the ASDC conceptually and scientifically. At one hand creating the various unique data sets utilised by the project, as well as developing the scientific methodology for the prediction and statistics." %}</p>
+	                <p>{% trans "Dr. Emlyn Hagen has led the development of the ANHDC conceptually and scientifically. At one hand creating the various unique data sets utilised by the project, as well as developing the scientific methodology for the prediction and statistics." %}</p>
 	                <a class="btn btn-social btn-facebook" href="#"><i class="icon-facebook"></i></a> <a class="btn btn-social btn-google-plus" href="#"><i class="icon-google-plus"></i></a> <a class="btn btn-social btn-twitter" href="#"><i class="icon-twitter"></i></a> <a class="btn btn-social btn-linkedin" href="#"><i class="icon-linkedin"></i></a>
 	            </div>
 	        </div>
@@ -125,9 +125,9 @@
 	            <div class="x_panel">
 	                <!-- <p><img src="images/sample/team2.jpg" alt="" ></p> -->
 	                <h5 class="center">{% trans "GeoNode Developer" %}</h5>
-	                <p>{% trans "Mr. Budi Hermansyah has created the ASDC GeoNode portal. Which is an advanced and further development of the GeoNode supported by the World Bank. These advancements include the creation of all statistics and user interfaces, statistics, POI’s models, as well as automated data retrieval and analysis for forecasting purposes. Furthermore, an advanced dashboard has been created by Mr. Budi Hermansyah." %}
+	                <p>{% trans "Mr. Budi Hermansyah has created the ANHDC GeoNode portal. Which is an advanced and further development of the GeoNode supported by the World Bank. These advancements include the creation of all statistics and user interfaces, statistics, POI’s models, as well as automated data retrieval and analysis for forecasting purposes. Furthermore, an advanced dashboard has been created by Mr. Budi Hermansyah." %}
 	                <br>
-	                {% trans "Currently, he is also supported by Mr. Dodi Wahyu Setiawan for back-end side while Ms. Rafinkanisa Witarayoga supporting in the front-end development of ASDC." %} </p>
+	                {% trans "Currently, he is also supported by Mr. Dodi Wahyu Setiawan for back-end side while Ms. Rafinkanisa Witarayoga supporting in the front-end development of ANHDC." %} </p>
 	                <a class="btn btn-social btn-facebook" href="#"><i class="icon-facebook"></i></a> <a class="btn btn-social btn-google-plus" href="#"><i class="icon-google-plus"></i></a> <a class="btn btn-social btn-twitter" href="#"><i class="icon-twitter"></i></a> <a class="btn btn-social btn-linkedin" href="#"><i class="icon-linkedin"></i></a>
 	            </div>
 	        </div>
@@ -136,7 +136,7 @@
 	            <div class="x_panel">
 	                <!-- <p><img src="images/sample/team4.jpg" alt="" ></p> -->
 	                <h5 class="center">{% trans "Information Management Officer - Training and Outreach" %}</h5>
-	                <p>{% trans "Carlos L. Barrio has led the dedicated training program of users on the ASDC since October 2017. He is supported by two local nationals in this effort. The training program is further supported by videos as well as a certification process." %}</p>
+	                <p>{% trans "Carlos L. Barrio has led the dedicated training program of users on the ANHDC since October 2017. He is supported by two local nationals in this effort. The training program is further supported by videos as well as a certification process." %}</p>
 	                <a class="btn btn-social btn-facebook" href="#"><i class="icon-facebook"></i></a> <a class="btn btn-social btn-google-plus" href="#"><i class="icon-google-plus"></i></a> <a class="btn btn-social btn-twitter" href="#"><i class="icon-twitter"></i></a> <a class="btn btn-social btn-linkedin" href="#"><i class="icon-linkedin"></i></a>
 	            </div>
 	        </div>
@@ -144,8 +144,8 @@
 	        <div class="col-md-3">
 	            <div class="x_panel">
 	                <!-- <p><img src="images/sample/team3.jpg" alt="" ></p> -->
-	                <h5 class="center">Other Support</h5>
-	                <p>{% trans "The ASDC is supported by talented Information Management Officers in Kabul, who cover a range of humanitarian sectors. A data entry staff are updating information on on a daily basis.  A development unit is based in Indonesia who ensure the continuous improvements and functionally of the ASDC."%}</p>
+	                <h5 class="center">{% trans "Other Support" %}</h5>
+	                <p>{% trans "The ANHDC is supported by talented Information Management Officers in Kabul, who cover a range of humanitarian sectors. A data entry staff are updating information on on a daily basis.  A development unit is based in Indonesia who ensure the continuous improvements and functionally of the ANHDC."%}</p>
 	                <a class="btn btn-social btn-facebook" href="#"><i class="icon-facebook"></i></a> <a class="btn btn-social btn-google-plus" href="#"><i class="icon-google-plus"></i></a> <a class="btn btn-social btn-twitter" href="#"><i class="icon-twitter"></i></a> <a class="btn btn-social btn-linkedin" href="#"><i class="icon-linkedin"></i></a>
 	            </div>
 	        </div>
