change language of  static pages to pashto

--- a/geonode/templates/about.html
+++ b/geonode/templates/about.html
@@ -99,7 +99,7 @@
     	<div class="">
                 <!-- <img src="{{ STATIC_URL }}lib/foto/asdc.png" alt=""> -->
                 <div class="caption">
-                    <h4 class="">{% trans "DRR Core Team" %}</h4>
+                    <h4 class="">{% trans "ANHDC Core Team %}</h4>
                     <p class="lead">{% trans "Program Manager and Science Officer" %}</p>
 					<p>{% trans "Dr. Emlyn Hagen has led the development of the ASDC conceptually and scientifically. At one hand creating the various unique data sets utilised by the project, as well as developing the scientific methodology for the prediction and statistics." %}</p>
 
