--- a/geonode/templates/v2/doc.html
+++ b/geonode/templates/v2/doc.html
@@ -36,7 +36,7 @@
 				<br>Data and Methodologies - V0.9 - Emlyn Hagen, iMMAP (September 2016)
 				<br>None of the items in this document can be copied or edited</p>
 				<p>
-					{% trans "A detailed overview of the following core capabilities of the ASDC can be found at:" %}
+					{% trans "A detailed overview of the following core capabilities of the ANHDC can be found at:" %}
 				</p>
 				<ul>
 					<li>
