--- a/geonode/templates/v2/training.html
+++ b/geonode/templates/v2/training.html
@@ -43,7 +43,7 @@
 		<div class="row">
 			<div class="col-md-9">
 				<h3>{% trans "ANHDC Professional User Certification program" %}</h3>
-				<p>{% trans "iMMAP has initiated the ANHDC Professional User Certification program, which further expands the ANHDC training program with hands-on exercises. The certification highlights user proficiency with the functionalities of the ASDC and the capability to independently advance this knowledge." %}</p>
+				<p>{% trans "iMMAP has initiated the ANHDC Professional User Certification program, which further expands the ANHDC training program with hands-on exercises. The certification highlights user proficiency with the functionalities of the ANHDC and the capability to independently advance this knowledge." %}</p>
 				<p>{% trans "The certification takes place online and consist of 80 interactive questions &#40;75&#37; passing mark&#41;, tied to various scenarios. For proficient users it will take approximately 1-2 hours to complete, whereas for novice yet trained users it can take more than 3 hours. Having seen the ASDC Training videos is a perquisite to be able to complete." %}</p>
 				<p>{% trans "In the future, the certification will be a perquisite to access the Humanitarian Access tool/data" %}</p>
 				<a href="../dashboard/classmarker" target="_blank">{% trans "Go to Certification Portal" %}</a>
